2024.6.0
- #102 Fix error in calculation of 'Day after Thanksgiving'
       (thanks to Peter J. Mello)
- #103 Fix region code for Bremen in locale 'DE'
       (thanks to Olaf Sebelin)

2023.11.1
-      Add non-working days for 2024 in country 'HU'
- #97  Merge locale and country
-      Fix permalinks for holidays in locale de-DE for region BE

2023.11.0
-      es-ES: Implement 2024 holidays of Spain
-      Drop support for Python 3.7
-      Use double quotes instead of single quotes and f-strings

2023.4.0
-      en-GB: Add bank holiday for the coronation of King Charles III
-      Move creator functions to holidata module
-      Print proper error messages for exceptions instead of stack traces
-      Fix regex for locale

2022.11.0
-      es-ES: Implement 2023 holidays of Spain

2022.9.0
-      en-GB: Add Bank Holiday for State Funeral of Queen Elizabeth II

2022.8.2
-      Add ability to specify a locale via country and language

2022.8.0
- #87  Update legal sources for Turkish holidays

2022.7.0
-      Restructured package
- #85  Error in locale en-GB, year 2022
       (Thanks to Richard Fieldsend)
- #80  Add locale en-ZA
       (Thanks to girtu)
- #83  Update non-working days for 2022 in locale hu-HU
- #81  Add locale et-EE
       (Thanks to h0adp0re)
- #78  Add locale for sl-SI
       (Thanks to Dejan Dezman)
- #21  Update locale for pt-BR
       (Thanks to Adriano Correa)
- #58  Update locale for es-ES
       (Thanks to Vicente Jimenez Aguilar)
- #59  Add locale for hu-HU
       (Thanks to David Hanak)
- #60  Add locale for tr-TR
       (Thanks to farukara)
- #55  Fixed: Wrong assignment of flag `N` in locales en-US and es-US
- #54  Fixed: Wrong assignment of flag `N` in locale de-CH
- #53  Fixed: Regional holidays marked as national in locale de-DE
- #52  Fixed: Non-regional holidays not marked as national in locale nl-NL
- #51  Fixed: Regional holidays marked as national in locale de-AT
- #19  Add locale for sv-SE
       (Thanks to Martijn van der Ven)