@@ -1,0 +1,16 @@
+from holidata.holidays.holidays import Region
+
+
+class NW(Region):
+    def __init__(self, country):
+        super().__init__("NW", country)
+
+        self.define_holiday() \
+            .with_name("Allerheiligen") \
+            .on("11-01") \
+            .with_flags("RF")
+
+        self.define_holiday() \
+            .with_name("Fronleichnam") \
+            .on("60 days after Easter") \
+            .with_flags("RV")
