@@ -139,6 +139,14 @@
         'date': '2014-08-15',
         'description': 'Mariä Himmelfahrt',
         'locale': 'de-DE',
+        'notes': 'In Gemeinden mit überwiegend katholischer Bevölkerung',
+        'region': 'BY',
+        'type': 'RF'
+    },
+    {
+        'date': '2014-08-15',
+        'description': 'Mariä Himmelfahrt',
+        'locale': 'de-DE',
         'notes': '',
         'region': 'SL',
         'type': 'RF'
